--- a/app/src/main/res/layout/shopping_list_small_card.xml
+++ b/app/src/main/res/layout/shopping_list_small_card.xml
@@ -26,4 +26,16 @@
             tools:text="Date"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name"/>
+
+    <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_recent_history"
+            android:id="@+id/archivize_button"
+            app:layout_constraintStart_toEndOf="@+id/name"
+            android:layout_marginStart="180dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"/>
 </pl.wojtach.listazakupow.list.ShoppingListSmallView>
