--- a/app/src/main/res/layout/fragment_shopping_list_details.xml
+++ b/app/src/main/res/layout/fragment_shopping_list_details.xml
@@ -31,17 +31,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <pl.wojtach.listazakupow.details.ShoppingDetailsRecycler
-        android:id="@+id/shopping_items_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:scrollbars="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/details_name"
-        tools:listitem="@layout/shopping_item" />
+            android:id="@+id/shopping_items_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:scrollbars="vertical"
+            android:fitsSystemWindows="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/details_name"
+            tools:listitem="@layout/shopping_item" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_new_shopping_item_button"
