--- a/app/src/main/res/layout/shopping_list_small_card.xml
+++ b/app/src/main/res/layout/shopping_list_small_card.xml
@@ -33,9 +33,10 @@
             app:srcCompat="@android:drawable/ic_menu_recent_history"
             android:id="@+id/archivize_button"
             app:layout_constraintStart_toEndOf="@+id/name"
-            android:layout_marginStart="180dp"
+            android:layout_marginStart="32dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.89"/>
 </pl.wojtach.listazakupow.list.ShoppingListSmallView>
